round 1/Hacking_Lords/error-output.txt
submissions/Hacking_Lords/problem3.cpp: In function 'int main()':
submissions/Hacking_Lords/problem3.cpp:6:1: error: 'cin' was not declared in this scope
 cin>>n;
 ^~~
submissions/Hacking_Lords/problem3.cpp:6:1: note: suggested alternative:
In file included from submissions/Hacking_Lords/problem3.cpp:1:0:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:60:18: note:   'std::cin'
   extern istream cin;  /// Linked to standard input
                  ^~~
submissions/Hacking_Lords/problem3.cpp:11:1: error: 'cout' was not declared in this scope
 cout<<++j;
 ^~~~
submissions/Hacking_Lords/problem3.cpp:11:1: note: suggested alternative:
In file included from submissions/Hacking_Lords/problem3.cpp:1:0:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^~~~
